1. gave the entire website a Pokemon Crystal theme 2. changed my picture to the player character's sprite 3. changed font family to Press Start 2P 4. changed font size throughout the website 5. changed the color palette 6. renamed the colors in the CSS variables 7. changed the anchor positions match the navigation bar height 8. refactored some css code according to the DRY principle 9. reduced the bottom margin of the portfolio projects to 25px 10. reorganized the order of the projects 11. optimized the media queries according to the above changes 12. the portfolio section tag now correctly wraps the entire section

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -20,13 +20,6 @@
 }
 
 @media (max-width: 900px) {
-  .navigation a,
-  .profile-description,
-  .profile-links ion-icon,
-  .portfolio figure figcaption {
-    font-size: 1.8rem;
-  }
-
   .portfolio figure img,
   .portfolio figure figcaption {
     max-width: 545px;
@@ -38,18 +31,6 @@
 }
 
 @media (max-width: 800px) {
-  .navigation a,
-  .profile-description,
-  .profile-links ion-icon,
-  .profile-links span,
-  .portfolio figure figcaption {
-    font-size: 1.5rem;
-  }
-
-  .profile-name {
-    font-size: 2rem;
-  }
-
   .modal {
     min-width: 680px;
   }
@@ -59,18 +40,6 @@
   .profile-pic {
     max-width: 250px;
     max-height: 250px;
-  }
-
-  .navigation a,
-  .profile-description,
-  .profile-links ion-icon,
-  .profile-links span,
-  .portfolio figure figcaption {
-    font-size: 1.2rem;
-  }
-
-  .profile-name {
-    font-size: 1.8rem;
   }
 
   .modal {
