--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+/* font family import */
+
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 /* css reset */
 
 * {
@@ -5,7 +9,7 @@
   font-weight: inherit;
   font-family: inherit;
   font-style: inherit;
-  font-size: 20px;
+  font-size: 13px;
   line-height: 120%;
   box-sizing: border-box;
   border: 0;
@@ -17,22 +21,22 @@
 /* reusables */
 
 :root {
-  --white-smoke: #eee;
-  --prussian-blue: #003153;
+  --primary-color: #222;
+  --background-color: #fff;
 }
 
 a:link,
 a:visited,
 a:hover,
 a:active {
-  color: var(--prussian-blue);
+  color: var(--primary-color);
   text-decoration: none;
 }
 
 .anchor {
   display: block;
   position: relative;
-  top: -60px;
+  top: -50px;
   visibility: hidden;
 }
 
@@ -40,12 +44,12 @@ a:active {
 
 html {
   scroll-behavior: smooth;
+  background-color: var(--background-color);
+  color: var(--primary-color);
+  font-family: "Press Start 2P", cursive;
 }
 
 body {
-  background-color: var(--white-smoke);
-  color: var(--prussian-blue);
-  font-family: "Lexend", sans-serif;
   max-width: 1700px;
   margin: auto;
 }
@@ -63,7 +67,7 @@ body {
   left: 0;
   right: 0;
   z-index: 1;
-  background-color: var(--white-smoke);
+  background-color: var(--background-color);
 }
 
 .navigation a {
@@ -94,7 +98,6 @@ body {
 .profile-pic {
   display: block;
   margin: auto;
-  border-radius: 50%;
   max-width: 300px;
   max-height: 300px;
 }
@@ -105,11 +108,13 @@ body {
 }
 
 .profile-name {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
-.profile-description {
-  font-size: 2rem;
+.profile-description,
+.profile-links ion-icon,
+.profile-links span {
+  font-size: 1.5rem;
 }
 
 .profile-links {
@@ -117,7 +122,6 @@ body {
   flex-flow: row wrap;
   justify-content: center;
   width: 50%;
-  margin: auto;
 }
 
 .profile-links a {
@@ -125,8 +129,6 @@ body {
 }
 
 .profile-links ion-icon {
-  font-size: 2.5rem;
-  height: 50px;
   display: inline-block;
   vertical-align: middle;
   text-align: center;
@@ -136,7 +138,6 @@ body {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  font-size: 1.7rem;
 }
 
 /* portfolio */
@@ -148,7 +149,7 @@ body {
 }
 
 .portfolio figure {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
   text-align: center;
 }
 
@@ -159,8 +160,9 @@ body {
   margin: auto 10px;
 }
 
-.portfolio figcaption {
+.portfolio figure figcaption {
   font-size: 1.5rem;
+  margin-top: 10px;
 }
 
 /* portfolio projects */
@@ -170,15 +172,15 @@ body {
 }
 
 .project-1 {
-  order: 3;
+  order: 1;
 }
 
 .project-2 {
-  order: 2;
+  order: 3;
 }
 
 .project-3 {
-  order: 1;
+  order: 2;
 }
 
 /* modals */
@@ -204,10 +206,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--white-smoke);
-  color: var(--prussian-blue);
+  background-color: var(--background-color);
+  color: var(--primary-color);
   z-index: 3;
-  border: 1px solid var(--prussian-blue);
+  border: 1px solid var(--primary-color);
   border-radius: 10px;
   padding: 10px;
   max-width: 1000px;
@@ -218,7 +220,7 @@ body {
   cursor: pointer;
   position: absolute;
   right: 10px;
-  color: var(--prussian-blue);
+  color: var(--primary-color);
 }
 table {
   margin: auto;
@@ -231,7 +233,7 @@ td {
 }
 
 tr td:nth-child(1) {
-  font-style: italic;
+  text-align: right;
 }
 
 .external-links td:nth-child(2) a {
